--- a/web/games/loader/style.css
+++ b/web/games/loader/style.css
@@ -1,5 +1,7 @@
 .webgl-content * {border: 0; margin: 0; padding: 0}
-
+p {
+  color: #24272c
+}
 
 .webgl-content .logo, .progress {position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 .webgl-content .logo {background: url('progressLogo.Light.png') no-repeat center / contain; width: 154px; height: 130px;}
