--- a/css.css
+++ b/css.css
@@ -20,11 +20,11 @@ a:hover {
 }
 
 hr {
-  background: #24272c;
+  background: #c4bebe;
 }
 
 .hero {
-  background: #060606;
+  background: #FFFFFF;
 }
 
 .title,
