--- a/css.css
+++ b/css.css
@@ -53,7 +53,7 @@ hr {
 
 .blog-posts {
   min-height: 100vh;
-  background: #191b1f;
+  background: #c4bebe;
   padding-top: 4rem;
   padding-bottom: 10rem;
 }
